--- a/index.html
+++ b/index.html
@@ -316,24 +316,10 @@ After much persuasion, Anjali agreed. Their marriage was celebrated by everyone 
 And so, they lived happily ever after, proving that love and kindness could bridge any gap.`,
     images: ["https://user-gen-media-assets.s3.amazonaws.com/seedream_images/6b75197d-61c5-4693-a0a2-a031fd8a50d9.png"]
   },
-  {
-    title: "The Lost Kite",
-    text: "In a small village in Rajasthan, a boy named Aarav loved flying kites. Every evening, he would run to the big open field near the banyan tree, his colorful kite soaring high in the sky. His favorite kite was bright red with a golden border—his "lucky kite."  
-
-One windy afternoon, Aarav's kite danced higher than ever before. He laughed as it twirled and swirled, challenging the other kites around. But suddenly, a strong gust of wind snapped the string. Aarav watched in shock as his kite floated away, disappearing behind the hills.  
-
-Heartbroken, Aarav spent the next few days searching for his kite. He climbed trees, walked along streams, and even asked villagers if they had seen it. But there was no sign of the red kite.  
-
-One day, while exploring a distant part of the village, Aarav saw a little girl sitting under a neem tree, holding a familiar red kite. Excited, he ran to her. "That’s my kite!" he exclaimed.  
-
-The girl smiled shyly. "I found it stuck in the branches. It’s so beautiful, I couldn't let it go."  
-
-Aarav hesitated, then said, "It is special to me. But… if you like it, you can keep it."  
-
-The girl’s face lit up. She handed the kite back to Aarav. "No, it belongs to you. But maybe we can fly it together?"  
-
-From that day on, Aarav and the girl, Meera, became best friends. The red kite flew higher than ever, carrying with it the joy of their newfound friendship.  ",
-    images: ["https://via.placeholder.com/600x300?text=Lost+Key"]
+   {
+    title: "Aarav & Meera's Kite",
+    text: "In a small village in Rajasthan, a boy named Aarav loved flying kites. Every evening, he would run to the big open field near the banyan tree, his colorful kite soaring high in the sky. His favorite kite was bright red with a golden border—his 'lucky kite'. One windy afternoon, Aarav's kite danced higher than ever before. He laughed as it twirled and swirled, challenging the other kites around. But suddenly, a strong gust of wind snapped the string. Aarav watched in shock as his kite floated away, disappearing behind the hills. Heartbroken, Aarav spent the next few days searching for his kite. He climbed trees, walked along streams, and even asked villagers if they had seen it. But there was no sign of the red kite. One day, while exploring a distant part of the village, Aarav saw a little girl sitting under a neem tree, holding a familiar red kite. Excited, he ran to her. 'That’s my kite!' he exclaimed. The girl smiled shyly. 'I found it stuck in the branches. It’s so beautiful, I couldn't let it go.' Aarav hesitated, then said, 'It is special to me. But… if you like it, you can keep it.' The girl’s face lit up. She handed the kite back to Aarav. 'No, it belongs to you. But maybe we can fly it together?' From that day on, Aarav and the girl, Meera, became best friends. The red kite flew higher than ever, carrying with it the joy of their newfound friendship.",
+    images: ["https://v3b.fal.media/files/b/lion/r-rstur9m-hTcnr5qDN5k_5f1c2ce4a84c423ba9bda2504bbbdee5.png"]
   },
   {
     title: "Moonlit Night",
